examples/test/testpolicy15593.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15593
  namespace: namespace260
spec:
  podSelector:
    matchLabels:
      key7: value39
      key13: value2
      key35: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value12
          key32: value11
          key14: value15
      podSelector:
        matchLabels:
          key17: value46
          key5: value18
